force-app/main/default/objects/LineItem__c/LineItem__c.object-meta.xml
<CustomObject>
    <label>LineItem</label>
    <nameField>
        <displayFormat>DY-{0000}</displayFormat>
        <label>Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>