force-app/main/default/objects/LineItem__c/fields/Activity_Listing__c.field-meta.xml
<CustomField>
    <fullName>Activity_Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Listing</label>
    <referenceTo>Activity_Listing__c</referenceTo>
    <relationshipLabel>Days</relationshipLabel>
    <relationshipName>Days</relationshipName>
    <type>Lookup</type>
</CustomField>