force-app/main/default/objects/LineItem__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Instruction for the Day</description>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>