force-app/main/default/objects/LineItem__c/fields/Booking_Request__c.field-meta.xml
<CustomField>
    <fullName>Booking_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hotel or Flight bookings</description>
    <inlineHelpText>Hotel or Flight bookings</inlineHelpText>
    <label>Booking Request</label>
    <referenceTo>Booking_Request__c</referenceTo>
    <relationshipLabel>Line Item</relationshipLabel>
    <relationshipName>Days</relationshipName>
    <type>Lookup</type>
</CustomField>