force-app/main/default/objects/LineItem__c/fields/FlightListing__c.field-meta.xml
<CustomField>
    <fullName>FlightListing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlightListing</label>
    <referenceTo>FlightListing__c</referenceTo>
    <relationshipLabel>Days</relationshipLabel>
    <relationshipName>Days</relationshipName>
    <type>Lookup</type>
</CustomField>