force-app/main/default/objects/LineItem__c/fields/HotelListing__c.field-meta.xml
<CustomField>
    <fullName>HotelListing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HotelListing</label>
    <referenceTo>HotelListing__c</referenceTo>
    <relationshipLabel>Days</relationshipLabel>
    <relationshipName>Days</relationshipName>
    <type>Lookup</type>
</CustomField>