force-app/main/default/objects/LineItem__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary</label>
    <referenceTo>Itinerary_Listing__c</referenceTo>
    <relationshipName>Days</relationshipName>
    <type>Lookup</type>
</CustomField>