force-app/main/default/objects/LineItem__c/fields/Short_Title__c.field-meta.xml
<CustomField>
    <fullName>Short_Title__c</fullName>
    <label>Short Title</label>
    <type>TextArea</type>
</CustomField>