force-app/main/default/objects/LineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>Itinerary__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Itinerary__c</field>
        <operation>equals</operation>
        <value>a00KB00000FQcNGYA1</value>
    </filters>
    <label>All</label>
</ListView>